grammar.js
    source_file: $ => repeat($._statement),

    _statement: $ =>
      seq(
        choice(
          $.select_statement,
          $.create_table_statement,
          $.create_function_statement,
          $.create_view_statement,
        ),
        optional(";"),
      ),

    _simple_statement: $ =>
      prec.right(
        seq(
          choice(
            $.select_statement,
            $.create_table_statement,
            $.create_view_statement,
          ),
          optional(";"),
        ),
      ),

    select_statement: $ => seq(optional($.with_clause), $._select_statement),

    _function_language: $ =>
      seq(
        kw("LANGUAGE"),
        alias(choice(/[a-zA-Z]+/, /'[a-zA-Z]+'/), $.language),
      ),
    _compound_statement: $ =>
        prec.right(
            seq(
                optional(seq(field("begin_label", $.identifier), ":")),
                kw("BEGIN"),
                optional(kw("ATOMIC")),
                repeat1($._simple_statement),
                kw("END"),
                optional(field("end_label", $.identifier)),
                optional(";"),
            ),
        ),
    create_function_statement: $ =>
        prec.right(
            seq(
                "FUNCTION",
                $._identifier,
                $.create_function_parameters,
                seq(kw("RETURNS"), $._create_function_return_type),
                repeat(
                    choice(
                        $._function_language,
                        seq(kw("TRANSFORM FOR TYPE"), commaSep1($.identifier)),
                        kw("WINDOW"),
                        seq(optional(kw("NOT")), kw("LEAKPROOF")),
                        seq(kw("COST"), $.number),
                        seq(kw("ROWS"), $.number),
                        seq(kw("SUPPORT"), $.identifier),
                        $.function_body,
                    ),
                ),
            ),
        ),

    _create_function_return_type: $ =>
        prec.right(choice($.setof, $._type, $.constrained_type)),
    setof: $ =>
        prec.right(seq(kw("SETOF"), choice($._type, $.constrained_type))),
    constrained_type: $ => seq($._type, $.null_constraint),
    create_function_parameter: $ =>
        seq(
            field(
                "argmode",
                optional(choice(kw("IN"), kw("OUT"), kw("INOUT"), kw("VARIADIC"))),
            ),
            optional($.identifier),
            choice($._type, $.constrained_type),
            optional(seq("=", alias($._expression, $.default))),
        ),
    create_function_parameters: $ =>
        seq("(", optional(commaSep1($.create_function_parameter)), ")"),

    function_body: $ =>
        choice(
            $._simple_statement,
            $._compound_statement,
            seq(kw("AS"), field("script", $.string)),
            seq(
                kw("AS"),
                field("obj_file", $.string),
                field("link_symbol", $.string),
            ),
        ),
    table_column: $ =>
        prec.right(
            seq(
                field("name", $._identifier),
                field("type", $._type),
                repeat(
                    choice(
                        $.default_clause,
                        $.check_constraint,
                        $.unique_constraint,
                        $.null_constraint,
                    ),
                ),
            ),
        ),
    named_constraint: $ => seq("CONSTRAINT", $.identifier),
    _column_default_expression: $ =>
        choice(
            $._parenthesized_expression,
            $.string,
            $.number,
            $.identifier,
            $.function_call,
        ),
    default_clause: $ =>
        seq(
            kw("DEFAULT"),
            // TODO: this should be specific variable-free expression https://www.postgresql.org/docs/9.1/sql-createtable.html
            // TODO: simple expression to use for check and default
            choice($._column_default_expression, $.type_cast),
        ),
    table_parameters: $ =>
        seq(
            "(",
            optional(commaSep1(choice($.table_column, $._table_constraint))),
            ")",
        ),
    _table_constraint: $ =>
        prec.right(
            seq(
                optional(seq(kw("CONSTRAINT"), field("name", $._identifier))),
                choice(
                    alias($.table_constraint_unique, $.unique),
                    alias($.table_constraint_check, $.check),
                    alias($.table_constraint_exclude, $.exclude),
                ),
            ),
        ),
    op_class: $ => $._identifier,
    exclude_entry: $ =>
        seq(
            $._identifier,
            optional($.op_class),
            optional(seq(kw("WITH"), $.binary_operator)),
        ),
    create_table_statement: $ =>
        seq(
            kw("CREATE"),
            kw("TABLE"),
            $._identifier,
            $.table_parameters,
        ),
    _select_statement: $ =>
      prec.right(
        seq(
          $.select_clause,
          optional($.from_clause),
          optional($.where_clause),
          optional($.group_by_clause),
          optional(commaSep1($.window_clause)),
          optional($.order_by_clause),
          optional($.limit_clause),
          optional($.offset_clause),
        ),
      ),

    group_by_clause: $ =>
      seq(
        kw("GROUP BY"),
        commaSep1($.group_expression),
        optional($.having_clause),
      ),
    group_expression: $ =>
      choice(
        $._expression,
        $.grouping_sets_clause,
        $.rollup_clause,
        $.cube_clause,
      ),
    order_expression: $ =>
      seq(
        $._expression,
        optional(alias(choice(kw("ASC"), kw("DESC")), $.order)),
        optional(
          alias(
            seq(kw("NULLS"), choice(kw("FIRST"), kw("LAST"))),
            $.nulls_order,
          ),
        ),
      ),
    order_by_clause: $ => seq(kw("ORDER BY"), commaSep1($.order_expression)),
    alias: $ =>
      choice(
        seq(
          $.identifier,
          optional(choice($.column_names, $.column_definitions)),
        ),
        $.column_definitions,
      ),
    _aliasable_expression: $ =>
      prec.right(choice($._expression, $._aliased_expression)),
    select_clause_body: $ =>
      commaSep1(
        seq(
          $._aliasable_expression,
          optional(seq(kw("INTO"), field("into", $.identifier))),
        ),
      ),
    select_clause: $ =>
      prec.right(seq(kw("SELECT"), optional($.select_clause_body))),
    from_clause: $ => seq(kw("FROM"), commaSep1($._from_item)),
    _from_item: $ =>
      choice(
        seq(
          optional(kw("ONLY")),
          $._aliasable_expression,
          optional($.tablesample_clause),
        ),
      ),
    select_subexpression: $ =>
      prec(1, seq(optional(kw("LATERAL")), "(", $.select_statement, ")")),

    conditional_expression: $ =>
      seq(
        kw("CASE"),
        repeat1(seq(kw("WHEN"), $._expression, kw("THEN"), $._expression)),
        optional(seq(kw("ELSE"), $._expression)),
        kw("END"),
      ),

    in_expression: $ =>
      prec.left(
        PREC.comparative,
        seq($._expression, optional(kw("NOT")), kw("IN"), $.tuple),
      ),
    tuple: $ =>
      seq(
        // TODO: maybe collapse with function arguments, but make sure to preserve clarity
        "(",
        field("elements", commaSep1($._expression)),
        ")",
      ),
    unique_constraint: $ => kw("UNIQUE"),
    null_constraint: $ => seq(optional(kw("NOT")), $.NULL),
    check_constraint: $ => seq(kw("CHECK"), $._expression),
    function_call: $ =>
      prec.right(
        1,
        seq(
          optional(kw("LATERAL")),
          field("function", $._identifier),
          "(",
          optional(field("arguments", $._function_call_arguments)),
          ")",
          optional($.with_ordinality),
          optional($.within_group_clause),
          optional($.filter_clause),
          optional($.over_clause),
        ),
      ),
    _function_call_arguments: $ =>
      seq(
        optional(choice(kw("ALL"), kw("DISTINCT"))),
        commaSep1($._expression),
        optional($.order_by_clause),
      ),
    _parenthesized_expression: $ =>
      prec.left(PREC.unary, seq("(", $._expression, ")")),
    is_expression: $ =>
      prec.left(
        PREC.comparative,
        seq(
          $._expression,
          kw("IS"),
          optional(kw("NOT")),
          choice($.NULL, $.TRUE, $.FALSE, $.distinct_from),
        ),
      ),
    distinct_from: $ => prec.left(seq(kw("DISTINCT FROM"), $._expression)),
    boolean_expression: $ =>
      choice(
        prec.left(PREC.unary, seq(kw("NOT"), $._expression)),
        prec.left(PREC.and, seq($._expression, kw("AND"), $._expression)),
        prec.left(PREC.or, seq($._expression, kw("OR"), $._expression)),
      ),
    at_time_zone_expression: $ =>
      prec.left(
        PREC.primary,
        seq($._expression, kw("AT TIME ZONE"), $._expression),
      ),
    number: $ => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(
        seq(
          choice(
            seq(digits, ".", optional(digits), optional(exponent)),
            seq(optional(digits), ".", digits, optional(exponent)),
            seq(digits, exponent),
            seq(digits),
          ),
        ),
      );
    },

    _unquoted_identifier: $ => /[a-zA-Z0-9_]+/,
    _quoted_identifier: $ => seq('"', field("name", /(""|[^"])*/), '"'), // ANSI QUOTES
    identifier: $ => choice($._unquoted_identifier, $._quoted_identifier),
    dotted_name: $ => prec.left(PREC.primary, sep2($.identifier, ".")),
    _identifier: $ => choice($.identifier, $.dotted_name),
    string: $ =>
      choice(
        seq("'", field("content", alias(/(''|[^'])*/, $.content)), "'"),
        seq(
          $._dollar_quoted_string_tag,
          field("content", alias($._dollar_quoted_string_content, $.content)),
          $._dollar_quoted_string_end_tag,
        ),
      ),
    json_access: $ =>
      seq(
        $._expression,
        choice("->", "->>", "#>", "#>>"),
        choice($.string, $.number),
      ),
    type: $ =>
      prec.right(
        seq(
          $._identifier,
          optional(kw("VARYING")), // CHARACTER/BIT VARYING
          optional(kw("PRECISION")), // DOUBLE PRECISION
          optional(seq("(", commaSep1($.number), ")")),
          optional(seq(choice(kw("WITH"), kw("WITHOUT")), kw("TIME ZONE"))), // TIME/TIMESTAMP (n) WITH/WITHOUT TIME ZONE
        ),
      ),
    array_type: $ =>
      prec.right(seq($._type, repeat1(seq("[", optional($.number), "]")))),
    _type: $ => choice($.type, $.array_type),
    type_cast: $ =>
      seq(
        // TODO: should be moved to basic expression or something
        choice(
          $._parenthesized_expression,
          $.string,
          $._identifier,
          $.function_call,
        ),
        "::",
        field("type", $._type),
      ),

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    comment: $ =>
      token(
        choice(seq("--", /.*/), seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/")),
      ),
    unary_expression: $ =>
      prec(
        PREC.unary,
        seq(
          field(
            "operator",
            choice(
              "+",
              "-",
              "!!", // Factorial op (Removed in Postgres >= 14)
              "~", // Bitwise not
              "@", // Absolute value
              "|/", // square root
              "||/", // cube root
            ),
          ),
          field("operand", $._expression),
        ),
      ),

    binary_expression: $ => {
      const table = [
        [PREC.exp, "^"],
        [PREC.multiplicative, choice(...multiplicative_operators)],
        [PREC.additive, choice(...additive_operators)],
        [PREC.comparative, choice(...comparative_operators)],
      ];

      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              field("operator", operator),
              field("right", $._expression),
            ),
          ),
        ),
      );
    },

    binary_operator: $ => choice("=", "&&", "||"),
    asterisk_expression: $ => choice("*", seq($._identifier, ".*")),
    interval_expression: $ => seq(token(prec(1, kw("INTERVAL"))), $.string),
    _expression: $ =>
      choice(
        $.interval_expression,
        $.function_call,
        $.string,
        $.json_access,
        $.TRUE,
        $.FALSE,
        $.NULL,
        $.asterisk_expression,
        $._identifier,
        $.number,
        $.in_expression,
        $.is_expression,
        $.boolean_expression,
        $._parenthesized_expression,
        $.type_cast,
        $.unary_expression,
        $.binary_expression,
        $.conditional_expression,
        $.array_element_access,
        $.argument_reference,
        $.select_subexpression,
        $.at_time_zone_expression,
      ),
  },
});

function commaSep1(rule) {
  return sep1(rule, ",");
}

function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}

function sep2(rule, separator) {
  return seq(rule, repeat1(seq(separator, rule)));
}
